Bug 1259588 - new File("") throws TypeError exception, r=baku